# memex

./: .gitignore  README.md  pyproject.toml
.factory/skills/memex/: SKILL.md
docs/superpowers/plans/: 2026-04-22-phase1-foundation.md  2026-04-22-phase2-intelligence.md
docs/superpowers/specs/: 2026-04-22-memex-design.md
hooks/: pre-compact.py  session-end.py  session-start.py
memex/: cli.py  config.py  inject.py  installer.py  llm_client.py  note_writer.py  pre_filter.py  project_id.py  search.py  state.py
memex/hooks/: pre-compact.py  session-end.py  session-start.py
memex/scripts/: compile.py  flush.py
scripts/: compile.py  flush.py
tests/: conftest.py  test_cli.py  test_compile.py  test_config.py  test_flush_real.py  test_hooks.py  test_inject.py  test_installer.py  test_integration.py  test_llm_client.py  test_note_writer.py  test_phase2_integration.py  test_pre_filter.py  test_project_id.py  test_search.py  test_state.py
