[project]
name = "memex"
version = "1.0.1"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "openai>=1.0",
    "graphifyy==0.4.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
memex = "memex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
